added bunch of draft, stl viewer, a couple posts

--- a/_posts/2018-11-10-Lightbox.md
+++ b/_posts/2018-11-10-Lightbox.md
@@ -24,8 +24,8 @@ Example:
 
 Produces:
 
-<a href="/images/xs750.jpg" data-lightbox="image-1" data-title="1978 Yamaha XS750">
-  <img width="100" src="/images/xs750.jpg"/>
+<a href="/images/vehicles/xs750.jpg" data-lightbox="image-1" data-title="1978 Yamaha XS750">
+  <img width="100" src="/images/vehicles/xs750.jpg"/>
 </a>
 <a href="/images/roundporch.jpg" data-lightbox="image-1" data-title="The Round Porch">
   <img width="100" src="/images/roundporch.jpg"/>
